alb.tf
resource "aws_lb" "devops_project_alb" {
  name               = "alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.devops_project_public_subnet_1.id, aws_subnet.devops_project_public_subnet_2.id]
}

# Create ALB target group
resource "aws_lb_target_group" "devops_project_tg" {
  name     = "devops_project-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.devops_project_vpc.id

  depends_on = [aws_vpc.devops_project_vpc]
}

# Create target attachments
resource "aws_lb_target_group_attachment" "devops_project_tg_attach1" {
  target_group_arn = aws_lb_target_group.devops_project_tg.arn
  target_id        = aws_instance.devops_project_web_server_1.id
  port             = 80

  depends_on = [aws_instance.devops_project_web_server_1]
}

resource "aws_lb_target_group_attachment" "devops_project_tg_attach2" {
  target_group_arn = aws_lb_target_group.devops_project_tg.arn
  target_id        = aws_instance.devops_project_web_server_2.id
  port             = 80

  depends_on = [aws_instance.devops_project_web_server_2]
}

# Create listener
resource "aws_lb_listener" "devops_project_lb_listener" {
  load_balancer_arn = aws_lb.devops_project_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.devops_project_tg.arn
  }
}
